[gd_scene load_steps=2 format=2]

[ext_resource path="res://Interface/Interface.gd" type="Script" id=1]

[node name="Interface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Stats" type="RichTextLabel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 25.0
margin_right = -1.0
text = "Round: 42069

Player Cells: 420
Enemy Cells: 420"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Configuration Menu" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Configuration Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 118.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Configuration Menu/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 25.0
margin_right = -25.0
margin_bottom = -25.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Configuration Menu/Panel/VBoxContainer"]
margin_right = 422.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Points to spend: 42"

[node name="minNeighbours" type="HBoxContainer" parent="Configuration Menu/Panel/VBoxContainer"]
margin_top = 52.0
margin_right = 422.0
margin_bottom = 95.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="Configuration Menu/Panel/VBoxContainer/minNeighbours"]
margin_right = 209.0
margin_bottom = 43.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Starting from round 11, cells needs minimum X neighbours to stay alive"

[node name="minNeigh_Button" type="Button" parent="Configuration Menu/Panel/VBoxContainer/minNeighbours"]
margin_left = 213.0
margin_right = 422.0
margin_bottom = 43.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "Decrease by 1"

[node name="maxNeighbours" type="HBoxContainer" parent="Configuration Menu/Panel/VBoxContainer"]
margin_top = 105.0
margin_right = 422.0
margin_bottom = 148.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="Configuration Menu/Panel/VBoxContainer/maxNeighbours"]
margin_right = 209.0
margin_bottom = 43.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Cells will die if there are more than X neighbours"

[node name="maxNeigh_Button" type="Button" parent="Configuration Menu/Panel/VBoxContainer/maxNeighbours"]
margin_left = 213.0
margin_right = 422.0
margin_bottom = 43.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "Increase by 1"

[node name="mitosis" type="HBoxContainer" parent="Configuration Menu/Panel/VBoxContainer"]
margin_top = 158.0
margin_right = 422.0
margin_bottom = 201.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="Configuration Menu/Panel/VBoxContainer/mitosis"]
margin_right = 209.0
margin_bottom = 43.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Newly created cells will divide X times before stopping"

[node name="mitosis_Button" type="Button" parent="Configuration Menu/Panel/VBoxContainer/mitosis"]
margin_left = 213.0
margin_right = 422.0
margin_bottom = 43.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "Increase by 5"

[node name="defense" type="HBoxContainer" parent="Configuration Menu/Panel/VBoxContainer"]
margin_top = 211.0
margin_right = 422.0
margin_bottom = 253.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="Configuration Menu/Panel/VBoxContainer/defense"]
margin_right = 209.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Your cells will be taken over by the enemy if there are more than X neighbouring enemy cells"

[node name="defense_Button" type="Button" parent="Configuration Menu/Panel/VBoxContainer/defense"]
margin_left = 213.0
margin_right = 422.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "Increase by 1"

[node name="direction" type="HBoxContainer" parent="Configuration Menu/Panel/VBoxContainer"]
margin_top = 263.0
margin_right = 422.0
margin_bottom = 306.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="Configuration Menu/Panel/VBoxContainer/direction"]
margin_right = 209.0
margin_bottom = 43.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Change the preferred direction for new cells to spawn"

[node name="OptionButton" type="OptionButton" parent="Configuration Menu/Panel/VBoxContainer/direction"]
margin_left = 213.0
margin_right = 422.0
margin_bottom = 43.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="HBoxContainer" parent="Configuration Menu/Panel/VBoxContainer"]
margin_top = 316.0
margin_right = 422.0
margin_bottom = 359.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StartRound" type="HBoxContainer" parent="Configuration Menu/Panel/VBoxContainer"]
margin_top = 369.0
margin_right = 422.0
margin_bottom = 412.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StartRound_Button" type="Button" parent="Configuration Menu/Panel/VBoxContainer/StartRound"]
margin_right = 422.0
margin_bottom = 43.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Start Simulation"

[node name="GameOverScreen" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="GameOverScreen"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 60.0
margin_top = -102.0
margin_right = -60.0
margin_bottom = 135.0

[node name="RichTextLabel" type="RichTextLabel" parent="GameOverScreen/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 23.0
margin_top = 25.0
text = "You Won!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit_Button" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -154.765
margin_top = 20.7652
margin_right = -20.7651
margin_bottom = 54.7652
text = "Back to Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Configuration Menu/Panel/VBoxContainer/minNeighbours/minNeigh_Button" to="." method="_on_minNeigh_Button_pressed"]
[connection signal="pressed" from="Configuration Menu/Panel/VBoxContainer/maxNeighbours/maxNeigh_Button" to="." method="_on_maxNeigh_Button_pressed"]
[connection signal="pressed" from="Configuration Menu/Panel/VBoxContainer/mitosis/mitosis_Button" to="." method="_on_mitosis_Button_pressed"]
[connection signal="pressed" from="Configuration Menu/Panel/VBoxContainer/defense/defense_Button" to="." method="_on_defense_Button_pressed"]
[connection signal="item_selected" from="Configuration Menu/Panel/VBoxContainer/direction/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="Configuration Menu/Panel/VBoxContainer/StartRound/StartRound_Button" to="." method="_on_StartRound_Button_pressed"]
[connection signal="pressed" from="Exit_Button" to="." method="_on_Exit_Button_pressed"]
